Added default avatar, added swagger doc, added put route for visualizations
